service-layer EntityManager JPQL migrated to jooq
NotificationService (permission lookup), AppBookService.getFilterOptions
(author/language/file-type facets), AppAuthorService (author listing) and
AppSeriesService.getSeries (series aggregate + count + enrichment) no longer
use EntityManager.createQuery. New JooqUserRepository, JooqAppAuthorRepository,
JooqAppSeriesRepository plus facet queries on JooqAppBookRepository. The
remaining EntityManager flush/clear/merge calls are JPA write-path lifecycle
and stay until the write migration.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>